# Pick-and-place-OpenManipulatorX

./: README.md
install/: local_setup.sh  setup.ps1  setup.sh
install/omx_pick_place/lib/omx_pick_place/: omx_pick_place
install/omx_pick_place/share/omx_pick_place/: package.ps1  package.sh
install/omx_pick_place/share/omx_pick_place/cmake/: omx_pick_placeConfig.cmake
install/pick_place_pkg/share/ament_index/resource_index/package_run_dependencies/: pick_place_pkg
install/pick_place_pkg/share/pick_place_pkg/: local_setup.dsv  package.bash  package.dsv  package.sh  package.xml  package.zsh
omx_pick_and_pace_ws/install/: setup.bash  setup.zsh
omx_pick_and_pace_ws/install/omx_pick_place/share/omx_pick_place/: local_setup.sh  package.bash  package.dsv  package.zsh
omx_pick_and_pace_ws/install/pick_place_pkg/share/pick_place_pkg/: package.ps1
omx_pick_and_pace_ws/install/pick_place_pkg/share/pick_place_pkg/urdf/: cylinder.urdf
omx_pick_and_pace_ws/log/: latest_build
omx_pick_and_pace_ws/src/omx_pick_place/: CMakeLists.txt
omx_pick_and_pace_ws/src/omx_pick_place/src/: omx_pick_place.cpp
omx_pick_and_pace_ws/src/pick_place_pkg/: CMakeLists.txt
omx_pick_and_pace_ws/src/pick_place_pkg/urdf/: omx.urdf
src/: readme.md
src/pick_place_pkg/src/: omx_sim.py
